@@ -1,5 +1,6 @@
 - Fetch outage reports from the API
 - Outage report reminders
+- New command '!outage' to query info about current/selected outage
 
 * Mon Mar 06 2017 - version 0.4.0
 - API support has been moved to a standalone module
